--- a/src/citra_qt/main.ui
+++ b/src/citra_qt/main.ui
@@ -59,7 +59,7 @@
     </widget>
     <widget class="QMenu" name="menu_Amiibo">
      <property name="title">
-      <string>Amiibo</string>
+      <string>amiibo</string>
      </property>
      <addaction name="action_Load_Amiibo"/>
      <addaction name="action_Remove_Amiibo"/>
